--- a/assignment4/3DAnimBlender/.godot/editor/editor_layout.cfg
+++ b/assignment4/3DAnimBlender/.godot/editor/editor_layout.cfg
@@ -25,17 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://world.tscn", "res://robot_arm.tscn")
-current_scene="res://robot_arm.tscn"
+open_scenes=PackedStringArray("res://world.tscn")
+current_scene="res://world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://play.gd"]
-selected_script="res://play.gd"
+open_scripts=["res://arm.gd", "res://play.gd"]
+selected_script="res://arm.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
