--- a/assignment4/3DAnimBlender/.godot/editor/script_editor_cache.cfg
+++ b/assignment4/3DAnimBlender/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,24 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(0),
-"column": 22,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://arm.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 36,
+"row": 25,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
