--- a/3danimblender 3/.godot/editor/editor_layout.cfg
+++ b/3danimblender 3/.godot/editor/editor_layout.cfg
@@ -6,26 +6,26 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=145
+dock_split_2=-137
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-769
+dock_hsplit_2=231
+dock_hsplit_3=-213
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://16518_TargetHolder_FBGoalPost_V2_NEW.obj")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://world.tscn", "res://robot_arm.tscn")
+open_scenes=PackedStringArray("res://robot_arm.tscn", "res://world.tscn")
 current_scene="res://world.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://arm.gd", "res://play.gd"]
+open_scripts=["res://arm.gd", "res://path_follow_3d.gd", "res://play.gd"]
 selected_script="res://arm.gd"
 open_help=["Input"]
 script_split_offset=150
@@ -52,8 +52,8 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
-log_filter_3=true
-log_filter_4=true
-collapse=false
+log_filter_1=false
+log_filter_3=false
+log_filter_4=false
+collapse=true
 show_search=true
