--- a/3danimblender 3/.godot/editor/script_editor_cache.cfg
+++ b/3danimblender 3/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 52,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 791,
+"row": 78,
+"scroll_position": 75.799,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://path_follow_3d.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 158,
-"scroll_position": 146.0,
+"row": 15,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
